--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
-    --text-color: #1277f3;
+    --text-color: #DBE4EF;
     --card-front-color: #144480;
-    --card-back-color: #2fd3af;
+    --card-back-color: #00F4BF;
 }
 
 body {
@@ -77,7 +77,7 @@ body {
 
 .cartao__conteudo__resposta {
     transform: rotateY(180deg);
-    background-color: rgba(37, 170, 37, 0.2);
+    background-color: rgba(0, 244, 191, 0.2);
     border: 4px solid var(--card-back-color);
 }
 
